[Task.Char #1] Clean-up and prepare for further development
=> Removed deprecated interfaces, their implementations, and classes
=> Mark for removal obsolete interfaces and classes.
=> Replace old implementation with the new one where it is possible.